This is the changelog for Calamares. For each release, the major changes and
contributors are listed. Note that Calamares does not have a historical
changelog -- this log starts with version 3.2.0. The release notes on the
website will have to do for older versions.

# 3.2.30 (unreleased) #

This release contains contributions from (alphabetically by first name):
 - No external contributors yet

## Core ##
 - No core changes yet

## Modules ##
 - No module changes yet


# 3.2.29 (2020-08-20) #

This release contains contributions from (alphabetically by first name):
 - Asif Mahmud Shimon (new contributor! hi!)

## Core ##
 - Edge case in extracting string-lists from YAML, reported and fixed
   by Asif (#1491).
 - Progress reporting is now more flexible. Modules can have a weight
   assigned to them in the descriptor; module instances can have a weight
   assigned which overrides the module descriptor. When jobs are run
   for a module instance, the jobs report progress pro-rated by the
   module's weight. Or in other words, it is now possible to tweak
   the amount of the overall progress bar that different modules fill.
   The default settings give unpackfs a weight of 12. (#1176)

## Modules ##
 - The *users* module did not read the *defaultGroups* correctly.
   Fixed by the string-lists change mentioned above.


 # 3.2.28.3 (2020-08-18) #

Another hotfix, for more issues reported by Marco Obaid. Users
were not having a password set (#1489)


# 3.2.28.2 (2020-08-12) #

A second hotfix, for autologin support -- the autologin group was not
created in the target system before assigning the user to it. Reported
by Marco Obaid.


# 3.2.28.1 (2020-08-10) #

This is a hotfix release for #1482 and #1483, where no user was
created during installation and a chmod was failing (resulting in
a failed installation). Reported by Jonathan Riddell.

With incidental improvements in SPDX tagging (code licensing)
and some new icon options for the welcomeq and localeq modules.

