@@ -1,3 +1,7 @@
+<!-- SPDX-FileCopyrightText: no
+     SPDX-License-Identifier: CC0-1.0
+-->
+
 # MAINTAINER
 
 Calamares development is sponsored by Blue Systems GmbH - Liberating Software.
